# musicbingo

./: .coverage  AGENTS.md  CLAUDE.md  asset-manifest.json  index.html  integration_example.py  manifest.json  start-venue.sh
.beads/: issues.jsonl
.planning/: PROJECT.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-local-backend-infrastructure/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-FIX-SUMMARY.md  01-03-FIX.md  01-03-FIX2-SUMMARY.md  01-03-FIX2.md  01-03-ISSUES.md  01-03-PLAN.md  01-03-SUMMARY.md  (+7 more)
games/: all-out-90s.json  sample-game.json
musicbingo_api/: .gitignore  DEPLOYMENT.md  Procfile  README.md  nixpacks.toml  pyproject.toml  railway.toml  render.yaml  setup.py  start.sh
musicbingo_api/src/musicbingo_api/: __init__.py  game_loader.py  game_service.py  main.py  models.py  network.py  schemas.py
musicbingo_api/tests/: __init__.py  test_api.py  test_models.py
musicbingo_cards/: .gitignore  README.md  pyproject.toml  test_playlist.txt
musicbingo_cards/src/musicbingo_cards/: __init__.py  cli.py  csv_import.py  exporter.py  generator.py  models.py  pdf_generator.py  playlist.py  qr_code.py
musicbingo_cards/tests/: __init__.py  test_cli.py  test_csv_import.py  test_exporter.py  test_generator.py  test_models.py  test_pdf_generator.py  test_playlist.py  test_qr_code.py
musicbingo_host/: .env.example  package-lock.json  package.json
musicbingo_host/public/: index.html
musicbingo_host/src/: App.css  App.js  index.css
musicbingo_verify/: .env.production  .gitignore  package-lock.json  package.json
musicbingo_verify/public/: index.html
musicbingo_verify/src/: App.css  App.js  config.js  deploy-trigger.js  index.css  test-utils.js
scripts/: start-server.sh
static/css/: main.b35890b9.css  main.b35890b9.css.map  main.de4426d1.css  main.de4426d1.css.map
static/js/: 451.44557cda.chunk.js  451.44557cda.chunk.js.map  453.30de8702.chunk.js  453.30de8702.chunk.js.map  main.4dfe5620.js  main.4dfe5620.js.map  main.58a400c9.js  main.58a400c9.js.map  main.af42f902.js  main.af42f902.js.map
(+107 files in other folders)
